--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 "manifest_version": 2,
     "name": "Venus-sized",
-    "description": "Replaces 'Earth-sized' with 'Venus-sized' to remind you that size alone does not make a habitable world.",
+    "description": "Replaces 'Earth-sized', 'Earth-like' and 'super-Earth' with 'Venus-sized', 'Venus-like' and 'super-Venus' to remind you that size alone does not make a habitable world.",
     "version": "1.0",
     "content_scripts": [
         {
